[workspace]
default-members = [
    "apps/hash-graph",
]
exclude = [
    ".github/scripts/rust",
]
members = [
    "apps/hash-graph",
    "libs/@blockprotocol/type-system/rust",
    "libs/@local/codec",
    "libs/@local/codegen",
    "libs/@local/effect-dns/hickory",
    "libs/@local/graph/api",
    "libs/@local/graph/authorization",
    "libs/@local/graph/migrations",
    "libs/@local/graph/migrations-macros",
    "libs/@local/graph/postgres-store",
    "libs/@local/graph/store",
    "libs/@local/graph/temporal-versioning",
    "libs/@local/graph/test-server",
    "libs/@local/graph/type-defs",
    "libs/@local/graph/type-fetcher",
    "libs/@local/graph/types",
    "libs/@local/graph/validation",
    "libs/@local/harpc/client/rust",
    "libs/@local/harpc/codec",
    "libs/@local/harpc/net",
    "libs/@local/harpc/server",
    "libs/@local/harpc/system",
    "libs/@local/harpc/tower",
    "libs/@local/harpc/types",
    "libs/@local/harpc/wire-protocol",
    "libs/@local/hashql/*",
    "libs/@local/repo-chores/rust",
    "libs/@local/status/rust",
    "libs/@local/telemetry",
    "libs/@local/temporal-client",
    "libs/antsi",
    "libs/error-stack",
    "libs/error-stack/macros",
    "tests/graph/benches",
    "tests/graph/integration",
    "tests/graph/test-data/rust",
]
resolver = "3"

[workspace.package]
authors = ["HASH"]
edition = "2024"
license = "AGPL-3"
publish = false
version = "0.0.0"

[workspace.dependencies]
# Workspace members
error-stack                         = { path = "./libs/error-stack", default-features = false }
harpc-client.path                   = "libs/@local/harpc/client/rust"
harpc-codec.path                    = "libs/@local/harpc/codec"
harpc-net.path                      = "libs/@local/harpc/net"
harpc-server.path                   = "libs/@local/harpc/server"
harpc-system.path                   = "libs/@local/harpc/system"
harpc-tower.path                    = "libs/@local/harpc/tower"
harpc-types.path                    = "libs/@local/harpc/types"
harpc-wire-protocol.path            = "libs/@local/harpc/wire-protocol"
hash-codec.path                     = "libs/@local/codec"
hash-codegen.path                   = "libs/@local/codegen"
hash-graph-api.path                 = "libs/@local/graph/api"
hash-graph-authorization.path       = "libs/@local/graph/authorization"
hash-graph-migrations.path          = "libs/@local/graph/migrations"
hash-graph-migrations-macros.path   = "libs/@local/graph/migrations-macros"
hash-graph-postgres-store.path      = "libs/@local/graph/postgres-store"
hash-graph-store.path               = "libs/@local/graph/store"
hash-graph-temporal-versioning.path = "libs/@local/graph/temporal-versioning"
hash-graph-test-data.path           = "tests/graph/test-data/rust"
hash-graph-test-server.path         = "libs/@local/graph/test-server"
hash-graph-type-defs.path           = "libs/@local/graph/type-defs"
hash-graph-type-fetcher.path        = "libs/@local/graph/type-fetcher"
hash-graph-types.path               = "libs/@local/graph/types"
hash-graph-validation.path          = "libs/@local/graph/validation"
hash-repo-chores.path               = "libs/@local/repo-chores/rust"
hash-status.path                    = "libs/@local/status/rust"
hash-telemetry.path                 = "libs/@local/telemetry"
hash-temporal-client.path           = "libs/@local/temporal-client"
hashql-ast.path                     = "libs/@local/hashql/ast"
hashql-compiletest.path             = "libs/@local/hashql/compiletest"
hashql-core.path                    = "libs/@local/hashql/core"
hashql-diagnostics.path             = "libs/@local/hashql/diagnostics"
hashql-eval.path                    = "libs/@local/hashql/eval"
hashql-hir.path                     = "libs/@local/hashql/hir"
hashql-mir.path                     = "libs/@local/hashql/mir"
hashql-syntax-jexpr.path            = "libs/@local/hashql/syntax-jexpr"
type-system.path                    = "libs/@blockprotocol/type-system/rust"

# External dependencies
allocator-api2                     = { version = "0.2.8", default-features = false }
annotate-snippets                  = { version = "0.12.8", default-features = false }
ansi-to-html                       = { version = "0.2.2", default-features = false }
anstream                           = { version = "0.6.21", default-features = false }
anstyle                            = { version = "1.0.13", default-features = false }
anstyle-lossy                      = { version = "1.1.4", default-features = false }
anstyle-svg                        = { version = "0.1.11", default-features = false }
async-scoped                       = { version = "0.9.0", default-features = false }
aws-config                         = { version = "1.8.10" }
aws-sdk-s3                         = { version = "1.110.0", default-features = false }
aws-types                          = { version = "1.3.10", default-features = false }
axum                               = { version = "0.8.6" }
axum-core                          = { version = "0.5.5" }
bitvec                             = { version = "1.0.1", default-features = false }
bon                                = { version = "3.8.1", default-features = false, features = ["implied-bounds"] }
bstr                               = { version = "1.12.1" }
bump-scope                         = { version = "1.5.1", default-features = false, features = ["alloc", "nightly-clone-to-uninit", "panic-on-alloc", "std"] }
bytes                              = { version = "1.10.1" }
bytes-utils                        = { version = "0.1.4", default-features = false }
camino                             = { version = "1.1.12", default-features = false }
cargo_metadata                     = { version = "0.23.0", default-features = false }
cedar-policy-core                  = { version = "4.5.1", default-features = false, features = ["decimal"] }                                                                                       # FIXME: Remove `decimal`: https://github.com/cedar-policy/cedar/issues/1700
circular-buffer                    = { version = "1.1.0", default-features = false }
clap                               = { version = "4.5.51", features = ["color", "error-context", "help", "std", "suggestions", "usage"] }
clap_builder                       = { version = "4.5.51", default-features = false, features = ["std"] }
clap_complete                      = { version = "4.5.60", default-features = false }
codspeed-criterion-compat          = { version = "4.1.0" }
console_error_panic_hook           = { version = "0.1.7", default-features = false }
convert_case                       = { version = "0.10.0", default-features = false }
criterion                          = { version = "0.8.0" }
criterion-macro                    = { version = "0.4.0", default-features = false }
dashu-base                         = { version = "0.4.1", default-features = false }
dashu-float                        = { version = "0.4.3", default-features = false }
deadpool                           = { version = "0.12.3", default-features = false }
deadpool-postgres                  = { version = "0.14.1", default-features = false }
derive-where                       = { version = "1.6.0", default-features = false, features = ["nightly"] }
derive_more                        = { version = "2.0.1", default-features = false }
dotenv-flow                        = { version = "0.16.2", default-features = false }
either                             = { version = "1.15.0", default-features = false }
email_address                      = { version = "0.2.9", default-features = false }
ena                                = { version = "0.14.3", default-features = false }
enum-iterator                      = { version = "2.1.0", default-features = false }
enumflags2                         = { version = "0.7.12", default-features = false }
expect-test                        = { version = "1.5.1", default-features = false }
foldhash                           = { version = "0.2.0", default-features = false }
frunk                              = { version = "0.4.4", default-features = false }
frunk_core                         = { version = "0.4.4", default-features = false }
futures                            = { version = "0.3.31", default-features = false }
futures-channel                    = { version = "0.3.31", default-features = false }
futures-core                       = { version = "0.3.31", default-features = false }
futures-io                         = { version = "0.3.31", default-features = false }
futures-sink                       = { version = "0.3.31", default-features = false }
futures-util                       = { version = "0.3.31", default-features = false }
glob                               = { version = "0.3.3" }
globset                            = { version = "0.4.18", default-features = false }
guppy                              = { version = "0.17.20", default-features = false }
hashbrown                          = { version = "0.16.0", default-features = false, features = ["inline-more", "nightly", "raw-entry"] }
hifijson                           = { version = "0.4.0", default-features = false }
http                               = { version = "1.3.1", default-features = false }
humansize                          = { version = "2.1.3", default-features = false }
hyper                              = { version = "1.7.0", default-features = false }
include_dir                        = { version = "0.7.4", default-features = false }
include_dir_macros                 = { version = "0.7.4", default-features = false }
indexmap                           = { version = "2.12.0", default-features = false }
indicatif                          = { version = "0.18.2", default-features = false }
indoc                              = { version = "2.0.7", default-features = false }
inferno                            = { version = "0.12.3", default-features = false }
insta                              = { version = "1.43.2", default-features = false }
iso8601-duration                   = { version = "0.2.0", default-features = false }
itertools                          = { version = "0.14.0", default-features = false }
jsonptr                            = { version = "0.7.1", default-features = false }
lcov                               = { version = "0.8.1" }
lexical                            = { version = "7.0.5", default-features = false }
libp2p                             = { version = "0.56.0", default-features = false }
libp2p-core                        = { version = "0.43.1", default-features = false }
libp2p-identity                    = { version = "0.2.12", default-features = false }
libp2p-ping                        = { version = "0.47.0", default-features = false }
libp2p-stream                      = { version = "0.4.0-alpha", default-features = false }
libp2p-swarm                       = { version = "0.47.0", default-features = false }
libp2p-yamux                       = { version = "0.47.0", default-features = false }
libtest-mimic                      = { version = "0.8.1", default-features = false }
line-index                         = { version = "0.1.2", default-features = false }
logos                              = { version = "0.16.0", default-features = false }
memchr                             = { version = "2.7.6", default-features = false }
mimalloc                           = { version = "0.1.48", default-features = false }
mime                               = { version = "0.3.17", default-features = false }
multiaddr                          = { version = "0.18.2", default-features = false }
multistream-select                 = { version = "0.13.0", default-features = false }
napi                               = { version = "2.16.17", default-features = false }
napi-build                         = { version = "2.2.4", default-features = false }
napi-derive                        = { version = "2.16.13", default-features = false }
nextest-filtering                  = { version = "0.17.0", default-features = false }
nextest-metadata                   = { version = "0.12.2", default-features = false }
nodejs_package_json                = { version = "0.4.4" }
opentelemetry                      = { version = "0.30.0", default-features = false }
opentelemetry-appender-tracing     = { version = "0.30.1", default-features = false }
opentelemetry-otlp                 = { version = "0.30.0", default-features = false }
opentelemetry-semantic-conventions = { version = "0.30.0", default-features = false }
opentelemetry_sdk                  = { version = "0.30.0", default-features = false }
owo-colors                         = { version = "4.2.3", default-features = false }
oxc                                = { version = "0.95.0", default-features = false }
pin-project                        = { version = "1.1.10", default-features = false }
pin-project-lite                   = { version = "0.2.16", default-features = false }
postgres-protocol                  = { version = "0.6.9", default-features = false }
postgres-types                     = { version = "0.2.11", default-features = false }
pretty                             = { version = "0.12.5", default-features = false }
pretty_assertions                  = { version = "1.4.1", default-features = false, features = ["alloc"] }
proc-macro-error2                  = { version = "2.0.1", default-features = false }
proc-macro2                        = { version = "1.0.103", default-features = false }
prometheus-client                  = { version = "0.24.0", default-features = false }
proptest                           = { version = "1.7.0", default-features = false, features = ["alloc", "std"] }                                                                                  # `std` or `no_std` are required, `no_std` pulls in `libm`
quote                              = { version = "1.0.41", default-features = false }
radix_trie                         = { version = "0.3.0", default-features = false }
rand                               = { version = "0.9.2", default-features = false }
rand_distr                         = { version = "0.5.1", default-features = false }
rapidfuzz                          = { version = "0.5.0", default-features = false }
rayon                              = { version = "1.11.0", default-features = false }
refinery                           = { version = "0.8.16", default-features = false }
regex                              = { version = "1.11.2", default-features = false, features = ["perf", "unicode"] }
reqwest                            = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
reqwest-middleware                 = { version = "0.4.2", default-features = false }
reqwest-tracing                    = { version = "0.5.8", default-features = false }
roaring                            = { version = "0.11.2", default-features = false }
rpds                               = { version = "1.1.2", default-features = false }
rstest                             = { version = "0.26.1", default-features = false }
rustc_version                      = { version = "0.4.1", default-features = false }
scc                                = { version = "2.4.0", default-features = false }
semver                             = { version = "1.0.27", default-features = false }
sentry                             = { version = "0.46.0", default-features = false, features = ["backtrace", "contexts", "debug-images", "panic", "reqwest", "rustls", "tower-http", "tracing"] }
sentry-core                        = { version = "0.46.0", default-features = false }
sentry-types                       = { version = "0.46.0", default-features = false }
serde                              = { version = "1.0.228", default-features = false }
serde_core                         = { version = "1.0.228", default-features = false }
serde_json                         = { version = "1.0.145" }
serde_plain                        = { version = "1.0.2", default-features = false }
sha2                               = { version = "0.10.9", default-features = false }
similar-asserts                    = { version = "1.7.0", default-features = false }
simple-mermaid                     = { version = "0.2.0", default-features = false }
smallvec                           = { version = "2.0.0-alpha.11", default-features = false }
smol_str                           = { version = "0.3.4" }
sort-package-json                  = { version = "0.0.10" }
specta                             = { version = "2.0.0-rc.22", default-features = false }
stacker                            = { version = "0.1.22", default-features = false }
supports-color                     = { version = "3.0.2", default-features = false }
supports-unicode                   = { version = "3.0.0", default-features = false }
syn                                = { version = "2.0.108", default-features = false }
tachyonix                          = { version = "0.3.1", default-features = false }
tarpc                              = { version = "0.36.0", default-features = false, git = "https://github.com/google/tarpc", rev = "f55f36d2d876b1868cfcf52f41d0456a60cf726c" }
temporal-client                    = { git = "https://github.com/temporalio/sdk-core", rev = "4a2368d" }
temporal-sdk-core-protos           = { git = "https://github.com/temporalio/sdk-core", rev = "231e21cadb8004197a5b1dba2ecb1313596cc34c" }
test-log                           = { version = "0.2.18", default-features = false }
test-strategy                      = { version = "0.4.3", default-features = false }
text-size                          = { version = "1.1.1", default-features = false }
thiserror                          = { version = "2.0.17", default-features = false }
time                               = { version = "0.3.44", default-features = false }
tokio                              = { version = "1.47.1", default-features = false }
tokio-postgres                     = { version = "0.7.15", default-features = false }
tokio-stream                       = { version = "0.1.17", default-features = false }
tokio-test                         = { version = "0.4.4", default-features = false }
tokio-util                         = { version = "0.7.16", default-features = false }
toml                               = { version = "0.9.8", default-features = false }
tower                              = { version = "0.5.2", default-features = false }
tower-http                         = { version = "0.6.6", features = ["trace"] }
tower-layer                        = { version = "0.3.3", default-features = false }
tower-service                      = { version = "0.3.3", default-features = false }
tower-test                         = { version = "0.4.0", default-features = false }
tracing                            = { version = "0.1.41", default-features = false }
tracing-appender                   = { version = "0.2.3", default-features = false }
tracing-core                       = { version = "0.1.34", default-features = false }
tracing-error                      = { version = "0.2.1", default-features = false }
tracing-flame                      = { version = "0.2.0", default-features = false }
tracing-indicatif                  = { version = "0.3.13", default-features = false }
tracing-opentelemetry              = { version = "0.31.0", default-features = false }
tracing-subscriber                 = { version = "0.3.20", default-features = false }
trait-variant                      = { version = "0.1.2", default-features = false }
trybuild                           = { version = "1.0.113", default-features = false }
tsify-next                         = { version = "0.5.6", default-features = false }
unicase                            = { version = "2.8.1", default-features = false }
unicode-ident                      = { version = "1.0.22", default-features = false }
unicode-normalization              = { version = "0.1.25", default-features = false }
unicode-properties                 = { version = "0.1.4", default-features = false }
unicode-segmentation               = { version = "1.12.0", default-features = false }
url                                = { version = "2.5.7", default-features = false }
utoipa                             = { version = "4.2.3", default-features = false }
uuid                               = { version = "1.18.1", default-features = false }
walkdir                            = { version = "2.5.0", default-features = false }
wasm-bindgen                       = { version = "0.2.100", default-features = false }
wasm-bindgen-test                  = { version = "0.3.50", default-features = false }
winnow                             = { version = "0.7.13", default-features = false }
xxhash-rust                        = { version = "0.8.15", default-features = false }

[profile.dev]
# TODO: Use `codegen-backend = "cranelift"`
#       We currently use `llvm` for all profiles to avoid issues in `Docker`
codegen-backend = "llvm"

[profile.dev-llvm]
codegen-backend = "llvm"
inherits        = "dev"

# We use LLVM for non-workspace crates, mainly due to the lack of AVX2 support in Cranelift
[profile.dev.package."*"]
codegen-backend = "llvm"

[profile.test]
codegen-backend = "llvm"

# We use LLVM for non-workspace crates, mainly due to the lack of AVX2 support in Cranelift
[profile.test.package."*"]
codegen-backend = "llvm"

# We use `llvm-cov` which requires LLVM
[profile.coverage]
codegen-backend = "llvm"
inherits        = "test"

[profile.production]
inherits = "release"
lto      = "fat"
strip    = "none"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style   = { level = "warn", priority = -1 }

unreachable_pub = "warn"
unsafe_code     = "deny"

# TODO: Enable `cargo` lints when supported
# [workspace.lints.cargo]

[workspace.lints.clippy]
all         = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# Should be enabled:
absolute_paths                  = "allow"
allow_attributes_without_reason = "allow"
# With the current configuration option it's pretty much unusable. We'd like to
# use it for grouping in particular, but this comes with sorting by name as well.
# Needs to be further tested in a smaller scope.
arbitrary_source_item_ordering = "allow"
arithmetic_side_effects        = "allow"
as_conversions                 = "allow"
# Too many false positives when macros and/or loops are involved
cognitive_complexity    = "allow"
expect_used             = "allow"
let_underscore_must_use = "allow"
missing_assert_message  = "allow"
multiple_inherent_impl  = "allow"
panic                   = "allow"
partial_pub_fields      = "allow"
unwrap_in_result        = "allow"

# Consider enabling:
default_numeric_fallback      = "allow"
impl_trait_in_params          = "allow"
iter_over_hash_type           = "allow"
multiple_unsafe_ops_per_block = "allow"
pattern_type_mismatch         = "allow"
shadow_unrelated              = "allow"
single_call_fn                = "allow"
single_char_lifetime_names    = "allow"
tests_outside_test_module     = "allow"
unimplemented                 = "allow"
unreachable                   = "allow"

# Does not apply to us:
blanket_clippy_restriction_lints = "allow"
exhaustive_enums                 = "allow"
exhaustive_structs               = "allow"
implicit_return                  = "allow"
missing_docs_in_private_items    = "allow"
missing_inline_in_public_items   = "allow"
missing_trait_methods            = "allow" # Should be enabled per `impl` instead of globally
mod_module_files                 = "allow" # Opposite of `clippy::self_named_module_files`
module_name_repetitions          = "allow"
pub_use                          = "allow"
pub_with_shorthand               = "allow" # Opposite of `clippy::pub_without_shorthand`
question_mark_used               = "allow"
redundant_pub_crate              = "allow" # Opposite of `unreachable_pub`
ref_patterns                     = "allow"
semicolon_outside_block          = "allow" # Opposite of `clippy::semicolon_inside_block`
separated_literal_suffix         = "allow" # Opposite of `clippy::unseparated_literal_suffix`
shadow_reuse                     = "allow"
shadow_same                      = "allow"
unneeded_field_pattern           = "allow" # Actually, the opposite would be a great lint

[workspace.metadata.cargo-shear]
# We use the `futures` crate but the dependencies are required for public dependencies
ignored = ["futures-core", "futures-io", "futures-sink"]

[patch.crates-io]
specta = { git = "https://github.com/specta-rs/specta", rev = "ab7d924" }
oxc    = { git = "https://github.com/hashdeps/oxc", rev = "73c781b" }
