[tool.poetry]
name = "hash-agents"
version = "0.0.0"
description = ""
license = "AGPL-3.0-only"
authors = ["HASH"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.199"
openai = "^0.27.8"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
tiktoken = "^0.3.3"
beartype = "^0.13.1"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
structlog = "^23.1.0"
asgi-correlation-id = "^4.1.0"
rich = "^13.3.4"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.1"

[tool.poetry.group.build-tools.dependencies]
datamodel-code-generator = "^0.18.0"

[tool.poetry.group.lint-tools.dependencies]
black = "^23.3.0"
ruff = "^0.0.262"

[tool.poetry.group.production.dependencies]
gunicorn = "^20.1.0"


[tool.black]
target-version = ['py311']
preview = true

[tool.ruff]
select = ["ALL"]
ignore = [
    "D203", # this conflicts with `D211`
    "D213", # this conflicts with `D212`
    "D401", # Relates to PEP-257 but also conflicts with Google Python Style Guide, generally gets in the way
    "ANN101" # most type checkers infer the type of `self` automatically
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
