[tool.poetry]
name = "hash-ai-worker-py"
version = "0.0.0"
description = ""
license = "AGPL-3.0-only"
authors = ["HASH"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0"
openai = "^0.27.8"
temporalio = "^1.1.0"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.7.1"

[tool.poetry.group.lint-tools.dependencies]
black = "^23.3.0"
ruff = "^0.0.262"

[tool.poetry.group.production.dependencies]
gunicorn = "^20.1.0"


[tool.black]
target-version = ['py311']
preview = true

[tool.ruff]
select = ["ALL"]
ignore = [
    "D203", # this conflicts with `D211`
    "D213", # this conflicts with `D212`
    "D401", # Relates to PEP-257 but also conflicts with Google Python Style Guide, generally gets in the way
    "ANN101" # most type checkers infer the type of `self` automatically
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
