[tool.poetry]
name = "hash-ai-worker-py"
version = "0.0.0"
description = ""
license = "AGPL-3.0-only"
authors = ["HASH"]
readme = "README.md"
packages = [{ include = "worker", from = "src" }]

[tool.poetry.dependencies]
hash-graph-types = { path = "../../libs/@local/hash-graph-types/python", develop = true }

aiohttp = "^3.8.5"
python = "^3.11"
python-dotenv = "^1.0"
openai = "^0.28.1"
temporalio = "^1.3.0"
jsonref = "^1.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
httpx = "^0.25.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-vcr = "^1.0.2"

[tool.poetry.group.lint-tools.dependencies]
black = "^23.10.0"
ruff = "^0.1.1"
mypy = "^1.6.1"


[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = [
    "--import-mode=importlib",
]
asyncio_mode = "auto"


[tool.coverage.report]
omit = [
    "src/worker/tests/*"
]

[tool.black]
target-version = ['py311']
preview = true

[tool.ruff]
select = ["ALL"]
ignore = [
    "D203", # this conflicts with `D211`
    "D213", # this conflicts with `D212`
    "D401", # Relates to PEP-257 but also conflicts with Google Python Style Guide, generally gets in the way
    "ANN101", # most type checkers infer the type of `self` automatically
    "ANN102", # most type checkers infer the type of `cls` automatically
    "FIX002", # TODOs should be fixed, not removed
    "TD002", # We don't add authors to TODO strings
    "PLC0414", # Conflicts with `no_implicit_reexport = true`
    "ERA001", # Commented out code is not necessarily an error
]

target-version = "py311"

[tool.mypy]
plugins = "pydantic.mypy"

disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
strict_optional = true
show_error_codes = true
show_traceback = true
strict_equality = true

# warnings
warn_unused_configs = true
warn_return_any = true
warn_incomplete_stub = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true

# error messages
pretty = true
color_output = true
error_summary = true
incremental = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
