[workspace]
members = ["lib/*", "bin/*", "bench", "tests/*"]
default-members = ["bin/*", "lib/*"]
resolver = "2"

[workspace.package]
description = "The entity-graph query-layer for the HASH datastore"
readme = "README.md"
version = "0.0.0"
edition = "2021"
authors = ["HASH"]
license-file = "LICENSE.md"
publish = false
repository = "https://github.com/hashintel/hash/tree/main/apps/hash-graph"

[workspace.dependencies]
graph-test-data = { path = "../../tests/hash-graph-test-data/rust" }

# Ideally we would move this to `libs/` but we currently cannot have multiple Rust workspaces depending on each other
# as otherwise the CI would not be able to determine the dependency order. This would result in dependants not being
# tested in CI if the dependency was changed.
temporal-versioning = { path = "../../libs/@local/temporal-versioning" }
graph-types = { path = "../../libs/@local/hash-graph-types/rust" }
validation = { path = "../../libs/@local/hash-validation" }
authorization = { path = "../../libs/@local/hash-authorization" }
codec = { path = "../../libs/@local/codec" }

type-system = { git = "https://github.com/blockprotocol/blockprotocol", rev = "b63f923" }
hash-status = { path = "../../libs/@local/status/rust" }
error-stack = { version = "0.4.1", features = ["spantrace", "serde"] }

tokio-util = { version = "0.7.10", default-features = false }
bytes = "1.5.0"
utoipa = "4.1.0"
uuid = { version = "1.6.1", default-features = false }
postgres-types = { version = "0.2.6", default-features = false }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.34.0", default-features = false }
time = { version = "0.3.30", default-features = false }
tracing = "0.1.40"
futures = { version = "0.3.29", default-features = false }

[profile.production]
inherits = "release"
lto = "fat"
strip = "symbols"
