cargo-features = ["edition2024"]

[package]
name = "hash-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
description = "The entity-graph query-layer for the HASH datastore"

[package.metadata.sync.turborepo]
package-name = "@apps/hash-graph"

[dependencies]
# Workspace dependencies
hash-codec = { workspace = true }
error-stack = { workspace = true }
graph = { workspace = true, features = ["clap"] }
hash-graph-api = { workspace = true }
hash-graph-authorization = { workspace = true }
hash-graph-store = { workspace = true }
hash-graph-type-fetcher = { workspace = true }
hash-graph-types = { workspace = true }
hash-graph-validation = { workspace = true }
hash-graph-test-server = { workspace = true, optional = true }
hash-temporal-client = { workspace = true }
hash-tracing = { workspace = true, features = ["clap"] }
type-system = { workspace = true }
harpc-codec = { workspace = true, features = ["json"] }
harpc-server = { workspace = true }

# Third party dependencies
axum = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env", "wrap_help"] }
clap_complete = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
tarpc = { workspace = true, features = [
    "serde1",
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
time = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
multiaddr = { workspace = true }

[features]
test-server = ["dep:hash-graph-test-server"]

[lints]
workspace = true
