[package]
name              = "hash-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
authors.workspace = true
description       = "The entity-graph query-layer for the HASH datastore"

[package.metadata.sync.turborepo]
package-name = "@apps/hash-graph"

[dependencies]
# Workspace dependencies
error-stack               = { workspace = true }
harpc-codec               = { workspace = true, features = ["json"] }
harpc-server              = { workspace = true }
hash-codec                = { workspace = true }
hash-graph-api            = { workspace = true }
hash-graph-authorization  = { workspace = true }
hash-graph-postgres-store = { workspace = true, features = ["clap"] }
hash-graph-store          = { workspace = true }
hash-graph-test-server    = { workspace = true, optional = true }
hash-graph-type-fetcher   = { workspace = true }
hash-telemetry            = { workspace = true, features = ["clap"] }
hash-temporal-client      = { workspace = true }
type-system               = { workspace = true }

# Third party dependencies
axum = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive", "env", "wrap_help"] }
clap_complete = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true }
multiaddr = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
simple-mermaid = { workspace = true }
tarpc = { workspace = true, features = [
    "serde1",
    "tokio1",
    "serde-transport",
    "serde-transport-json",
    "tcp",
] }
time = { workspace = true }
tokio = { workspace = true, features = ["signal", "io-std"] }
tokio-postgres = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }

[features]
test-server = ["dep:hash-graph-test-server"]

[lints]
workspace = true
