[project]
name = "lm-prompt-optimization"
version = "0.0.0+private"
description = "Add your description here"
authors = [{ name = "HASH" }]
dependencies = ["dspy-ai>=2.4.9"]
readme = "README.md"
requires-python = ">= 3.11"
license = { text = "AGPL-3.0" }
classifiers = ["Private :: Do Not Upload"]

[project.scripts]
"main" = "lm_prompt_optimization:main"
"async-example" = "lm_prompt_optimization:async_example"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.10.0"]

[tool.rye.scripts]
typecheck = { cmd = "mypy --strict src/" }
