cargo-features = ["edition2024"]

[package]
name              = "chonky"
description       = "General-purpose tooling for segmenting, chunking and embedding files"
version           = "0.0.0"
publish           = false
authors           = ["Jesus Fileto <jesus.fileto@yale.edu>", "HASH"]
keywords          = ["segmentation", "extraction", "chunking", "embedding", "llm"]
categories        = ["algorithms"]
exclude           = ["package.json"]
license-file      = "LICENSE.md"
edition.workspace = true

[dependencies]
# Public workspace dependencies
error-stack = { workspace = true, public = true }

# Public third-party dependencies
image         = { workspace = true, public = true, features = ["png", "bmp"] }
pdfium-render = { workspace = true, public = true }

# Private workspace dependencies

# Private third-party dependencies
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
static = ["pdfium-render/static"]

[lints]
workspace = true
