cargo-features = ["edition2024"]

[package]
name              = "chonky"
description       = "General-purpose tooling for segmenting, chunking and embedding files"
version           = "0.0.0"
publish           = false
authors           = ["Jesus Fileto <jesus.fileto@yale.edu>", "HASH"]
keywords          = ["segmentation", "extraction", "chunking", "embedding", "llm"]
categories        = ["algorithms"]
exclude           = ["package.json"]
license-file      = "LICENSE.md"
edition.workspace = true

[dependencies]
# Public workspace dependencies
error-stack = { workspace = true, public = true }

# Public third-party dependencies
base64        = { workspace = true }
clap          = { workspace = true, features = ["derive"] }
futures       = { workspace = true, features = ["alloc"] }
image         = { workspace = true, public = true, features = ["png", "bmp"] }
num-traits    = { workspace = true }
pdfium-render = { workspace = true, features = ["thread_safe"], public = true }
reqwest       = { workspace = true, features = ["json"] }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
tokio         = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }

# Private workspace dependencies

# Private third-party dependencies
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }

[features]
static = ["pdfium-render/static"]

[lints]
workspace = true
